# macaron

./: .gitignore  CMakeLists.txt  README.md
scripts/: cleanup_processes.sh
scripts/latency_validation/: run_mbakery.py  run_workload.py
src/: CMakeLists.txt
src/apis/: CMakeLists.txt  cloudapis.cpp  cloudapis.hpp  redisapis.cpp  redisapis.hpp  rocksdbapis.cpp  rocksdbapis.hpp
src/cache/: CMakeLists.txt  cost_lru_cache.cpp  cost_lru_cache.hpp  cost_lru_cache_lambda.cpp  cost_lru_cache_lambda.hpp  latency_lru_cache.cpp  latency_lru_cache.hpp  latency_lru_cache_lambda.cpp  latency_lru_cache_lambda.hpp  meringue_cache.cpp  meringue_cache.hpp
src/cache_engine/: CMakeLists.txt  cache_engine.cpp  cache_engine.hpp  cache_engine_logger.cpp  cache_engine_logger.hpp  packing_block_manager.cpp  packing_block_manager.hpp
src/common/: CMakeLists.txt  configs.cpp  configs.hpp  enums.hpp  utils.cpp  utils.hpp
src/conf/: redis.conf
src/latency/: CMakeLists.txt  latency_generator.cpp  latency_generator.hpp
src/macaron_client/: CMakeLists.txt  macaron_client.cpp  macaron_client.hpp
src/mbakery/: CMakeLists.txt  mbakery.cpp  mbakery.hpp
src/meringue/: CMakeLists.txt  cache_item.cpp  cache_item.hpp  meringue.cpp  meringue.hpp
src/minisim/: CMakeLists.txt  cost_minisim.cpp  cost_minisim.hpp  latency_minisim.cpp  latency_minisim.hpp
src/minisim_lambda/: CMakeLists.txt  cost_minisim_lambda.cpp  cost_minisim_lambda.hpp  latency_minisim_lambda.cpp  latency_minisim_lambda.hpp
src/nodelocator/: CMakeLists.txt  consistent_hashing.cpp  consistent_hashing.hpp
src/protos/: CMakeLists.txt  cache_engine.grpc.pb.cc  cache_engine.grpc.pb.h  cache_engine.pb.cc  cache_engine.pb.h  cache_engine.proto  compile_proto.sh  mbakery.grpc.pb.cc  mbakery.grpc.pb.h  mbakery.pb.cc  mbakery.pb.h  mbakery.proto  meringue.grpc.pb.cc  meringue.grpc.pb.h  meringue.pb.cc  meringue.pb.h  meringue.proto
src/workload/: CMakeLists.txt  parsing_trace.cpp  workload_prep.cpp  workload_runner.cpp  workload_runner.hpp
src/workload_analyzer/: CMakeLists.txt  workload_analyzer.cpp
