add_subdirectory(common)
add_subdirectory(nodelocator)
add_subdirectory(protos)
add_subdirectory(latency)
add_subdirectory(apis)
add_subdirectory(cache)
add_subdirectory(minisim)
add_subdirectory(mbakery)
add_subdirectory(meringue)
add_subdirectory(cache_engine)
add_subdirectory(minisim_lambda)
add_subdirectory(macaron_client)
add_subdirectory(workload)
add_subdirectory(benchmark)
add_subdirectory(workload_analyzer)